Corrige issues de mantenibilidad en ms_compra